// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductsPageComponent should not render <app-product-item> if the id is not correct 1`] = `
<div
  id="root3"
  ng-version="18.2.8"
>
  <app-frame
    ng-reflect-vm="[object Object]"
  >
    <section
      class="flex flex-col gap-y-10 py-20 mx-5 sm:mx-20 lg:mx-40"
    >
      <h2>
        title0
      </h2>
      <app-product-list>
        <div
          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-10 transition-all"
        >
          <!--container-->
        </div>
      </app-product-list>
    </section>
    <!--container-->
  </app-frame>
  <!--container-->
</div>
`;

exports[`ProductsPageComponent should not render the template when there is no VM provided 1`] = `
<div
  id="root0"
  ng-version="18.2.8"
>
  <!--container-->
</div>
`;

exports[`ProductsPageComponent should render the correct <app-product-item> based on the current URL 1`] = `
<div
  id="root2"
  ng-version="18.2.8"
>
  <app-frame
    ng-reflect-vm="[object Object]"
  >
    <section
      class="flex flex-col gap-y-10 py-20 mx-5 sm:mx-20 lg:mx-40"
    >
      <h2>
        title0
      </h2>
      <app-product-list>
        <div
          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-10 transition-all"
        >
          <app-product-item
            class="h-full"
            ng-reflect-router-link="1"
            ng-reflect-vm="[object Object]"
            tabindex="0"
          >
            <a
              class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
            >
              <img
                alt="productAltText0"
                class="w-auto h-auto object-cover rounded-md"
                src="assets/lepke.jpg"
              />
              <h3
                class="font-bold text-xl sm:text-2xl mt-4"
              >
                productAltText0
              </h3>
              <p
                class="mt-4"
              >
                productDescription0
              </p>
            </a>
            <!--container-->
          </app-product-item>
          <!--container-->
        </div>
      </app-product-list>
    </section>
    <!--container-->
  </app-frame>
  <!--container-->
</div>
`;

exports[`ProductsPageComponent should render the correct <app-product-item> based on the current URL 2`] = `
<div
  id="root2"
  ng-version="18.2.8"
>
  <app-frame
    ng-reflect-vm="[object Object]"
  >
    <section
      class="flex flex-col gap-y-10 py-20 mx-5 sm:mx-20 lg:mx-40"
    >
      <h2>
        title0
      </h2>
      <app-product-list>
        <div
          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-10 transition-all"
        >
          <app-product-item
            class="h-full"
            ng-reflect-router-link="2"
            ng-reflect-vm="[object Object]"
            tabindex="0"
          >
            <a
              class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
            >
              <img
                alt="productAltText1"
                class="w-auto h-auto object-cover rounded-md"
                src="assets/lepke.jpg"
              />
              <h3
                class="font-bold text-xl sm:text-2xl mt-4"
              >
                productAltText1
              </h3>
              <p
                class="mt-4"
              >
                productDescription1
              </p>
            </a>
            <!--container-->
          </app-product-item>
          <!--container-->
        </div>
      </app-product-list>
    </section>
    <!--container-->
  </app-frame>
  <!--container-->
</div>
`;

exports[`ProductsPageComponent should render the correct <app-product-item> based on the current URL 3`] = `
<div
  id="root2"
  ng-version="18.2.8"
>
  <app-frame
    ng-reflect-vm="[object Object]"
  >
    <section
      class="flex flex-col gap-y-10 py-20 mx-5 sm:mx-20 lg:mx-40"
    >
      <h2>
        title0
      </h2>
      <app-product-list>
        <div
          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-10 transition-all"
        >
          <app-product-item
            class="h-full"
            ng-reflect-router-link="3"
            ng-reflect-vm="[object Object]"
            tabindex="0"
          >
            <a
              class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
            >
              <img
                alt="productAltText2"
                class="w-auto h-auto object-cover rounded-md"
                src="assets/lepke.jpg"
              />
              <h3
                class="font-bold text-xl sm:text-2xl mt-4"
              >
                productAltText2
              </h3>
              <p
                class="mt-4"
              >
                productDescription2
              </p>
            </a>
            <!--container-->
          </app-product-item>
          <!--container-->
        </div>
      </app-product-list>
    </section>
    <!--container-->
  </app-frame>
  <!--container-->
</div>
`;

exports[`ProductsPageComponent should render the template when the VM is provided 1`] = `
<div
  id="root1"
  ng-version="18.2.8"
>
  <app-frame
    ng-reflect-vm="[object Object]"
  >
    <section
      class="flex flex-col gap-y-10 py-20 mx-5 sm:mx-20 lg:mx-40"
    >
      <h2>
        title0
      </h2>
      <app-product-list>
        <div
          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-10 transition-all"
        >
          <!--container-->
        </div>
      </app-product-list>
    </section>
    <!--container-->
  </app-frame>
  <!--container-->
</div>
`;
